src/styles/ThemeToggle.module.css
/* Theme Toggle Switch */
.switch {
    --font-size: 4px;
    --height: 10em;
    --width: 24em;
    --margin: 0.5em;
    --color-night: rgba(15, 64, 91, 1);
    --color-day: rgba(91, 169, 211, 1);
    --color-sun: rgba(246, 211, 90, 1);
    --ease: cubic-bezier(0.770, 0.000, 0.175, 1.000);
    --duration: 0.85s;

    font-size: var(--font-size);
    position: relative;
    width: var(--width);
    height: var(--height);
    border-radius: 999px;
    background-color: var(--color-day);
    overflow: hidden;
    z-index: 2;
    outline: 0;
    border: 0;
    appearance: none;
    box-shadow: 2px 4px 12px -2px rgba(0, 0, 0, 0.25);
    cursor: pointer;
}

.switch::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--color-night);
    transition: opacity var(--duration) var(--ease);
    opacity: 0;
    z-index: 1;
}

.switchInner {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    transform-origin: right;
    transform: translate3d(calc(var(--width) - var(--height)), 0, 0);
    transition: transform var(--duration) var(--ease);
    z-index: 2;
}

.switchGlobe {
    --size: calc(var(--height) - (var(--margin) * 2));
    position: relative;
    height: var(--size);
    width: var(--size);
    margin: var(--margin) 0 0 var(--margin);
    border-radius: 999px;
    background-color: var(--color-sun);
    transform: rotate(90deg);
    transition: transform var(--duration) var(--ease);
    z-index: 1;
}

.switchGlobeCircle {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 50%;
    width: 100%;
    border-radius: 999px;
    background-color: var(--color-day);
    transform: translate3d(50%, 0, 0);
    transition:
        transform var(--duration) var(--ease),
        background-color var(--duration) var(--ease);
}

.switchGlobeMoon {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    border-radius: 999px;
    object-fit: cover;
    transform: scaleX(-1);
    opacity: 0;
    transition: opacity var(--duration) var(--ease);
}

.switchStars {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    object-fit: contain;
    object-position: right;
    transform-origin: right;
    transform: scale(0.25);
    transition: transform var(--duration) var(--ease);
    z-index: 2;
}

.switchCloud {
    position: absolute;
    transition: transform var(--duration) var(--ease);
    width: auto;
    bottom: 0;
    z-index: 3;
}

.cloud1 {
    left: 0;
    height: 65%;
}

.cloud2 {
    left: 3em;
    height: 50%;
}

/* Active state (dark mode) */
.isActive::after {
    opacity: 1;
}

.isActive .switchInner {
    transform: translate3d(0, 0, 0);
}

.isActive .switchGlobe {
    transform: rotate(0);
}

.isActive .switchGlobeCircle {
    background-color: var(--color-night);
    transform: translate3d(-10%, 0, 0);
}

.isActive .switchGlobeMoon {
    opacity: 1;
}

.isActive .switchStars {
    transform: scale(0.9);
}

.isActive .cloud1 {
    transform: translate3d(-12em, 4em, 0);
}

.isActive .cloud2 {
    transform: translate3d(-4em, 12em, 0);
}

